# pytables

./: .coveragerc  .gitattributes  .gitignore  .travis.yaml  .travis.yml  Dockerfile  Pipfile  README.rst  mypy.ini  pylintrc  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
Docker/: Dockerfile.dev  setup_docker_prereqs
pytables/: __init__.py  __main__.py  const.py
tests/: __init__.py  test_main.py
