[metadata]
license      = Apache License 2.0
license_file = LICENSE.md
platforms    = any
description  = Open-source rackspace management system on Python 3.
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[tool:pytest]
testpaths = tests
norecursedirs = .git testing_config

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build

[isort]
multi_line_output = 4
indent = "    "
# by default isort don't check module indexes
not_skip = __init__.py
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = pytables,tests
forced_separate = tests
combine_as_imports = true
use_parentheses = true